k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photomap-ui-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "${EXTERNAL_IP_NAME}"
    networking.gke.io/v1beta1.FrontendConfig: "photomap-ui-frontend-config"
    ingress.gcp.kubernetes.io/pre-shared-cert: "${SSL_CERTIFICATE_ID}"
spec:
  rules:
    - host: "${DOMAIN_NAME}"
      http:
        paths:
          - path: /cluster
            pathType: Prefix
            backend:
              service:
                name: photomap-supercluster-service
                port:
                  number: ${SUPERCLUSTER_PORT}
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: photomap-ui-service
                port:
                  number: ${UI_PORT}
          - path: /api/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway-service
                port:
                  number: ${API_GATEWAY_PORT}
          - path: /swagger-ui.html
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway-service
                port:
                  number: ${API_GATEWAY_PORT}
          - path: /webjars/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway-service
                port:
                  number: ${API_GATEWAY_PORT}
          - path: /doc/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway-service
                port:
                  number: ${API_GATEWAY_PORT}
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: notification-api-service
                port:
                  number: ${NOTIFICATION_API_PORT}
